--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
   
-  <img src=""          >
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="big boi lion">
+  
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="big boi lion" title="yeah yeah yeahhh">
 
   <!-- Your code here -->
 
